fixing networkign stuff

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - ./app:/app
     environment:
       BOX_SERVER_CFCONFIGFILE : .config.json
+    links: 
+          - "appdb:databasehost"
   appdb:
     image: mysql
     ports:
